# matrix.svg

./: README.md  generate_matrix_svg.py  main.py  pyproject.toml
